[package]
name = "kimde"
version = "0.1.2"
authors = ["POMMI3R"]
edition = "2018"

[dependencies]
toml = "0.5.6"
serde = "1.0.116"
serde_json = "1.0.57"
webdriver = "0.41.0"
fantoccini = "0.14.1"
tokio = { version = "0.2.22", features = [ "macros", "tcp", "dns", "io-util" ] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3